--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.1.1",
+  "version": "0.1.0",
   "license": "MIT",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -22,10 +22,12 @@
     "react": "^17.0.2"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.16.7",
     "@types/react": "^17.0.38",
     "effector": "^22.1.2",
     "tsdx": "^0.14.1",
-    "tslib": "^2.3.1"
+    "tslib": "^2.3.1",
+    "typescript": "^4.5.4"
   },
   "husky": {
     "hooks": {
