--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,7 @@
 {
   "tabWidth": 2,
   "useTabs": false,
-  "printWidth": 100
+  "printWidth": 100,
+  "singleQuote": true,
+  "trailingComma": "es5"
 }
