--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "prepare": "npm run build"
   },
   "peerDependencies": {
-    "effector": "^22",
+    "effector": "^22 | ^23",
     "react": ">=16.14.0",
     "solid-js": "~1.4.8"
   },
